--- a/android-kotlin/feature_chatbot/src/main/res/layout/activity_main.xml
+++ b/android-kotlin/feature_chatbot/src/main/res/layout/activity_main.xml
@@ -26,7 +26,9 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
-        android:padding="24dp"
+        android:paddingTop="24dp"
+        android:paddingStart="24dp"
+        android:paddingEnd="24dp"
         android:clipChildren="false"
         android:clipToPadding="false"
         app:layout_constraintTop_toTopOf="parent"
@@ -73,11 +75,15 @@
             android:clipChildren="false"
             android:clipToPadding="false">
 
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/chat_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="16dp" />
+                android:paddingStart="16dp"
+                android:paddingTop="16dp"
+                android:paddingEnd="16dp"
+                android:paddingBottom="0dp" />
 
             <ImageButton
                 android:id="@+id/scroll_to_bottom_button"
