--- a/android-kotlin/feature_chatbot/src/main/res/layout/item_chat_bot.xml
+++ b/android-kotlin/feature_chatbot/src/main/res/layout/item_chat_bot.xml
@@ -6,9 +6,8 @@
 
     <TextView
         android:id="@+id/messageText"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="start"
         android:layout_margin="8dp"
         android:padding="12dp"
         android:textColor="#ffffff"
