--- a/android-kotlin/feature_chatbot/src/main/res/layout/item_route_suggestion.xml
+++ b/android-kotlin/feature_chatbot/src/main/res/layout/item_route_suggestion.xml
@@ -14,7 +14,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
+        android:layout_gravity="center"
         android:orientation="vertical">
 
         <TextView
@@ -29,16 +29,19 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
             android:text="min"
             android:textColor="@color/white"
             android:textSize="14sp" />
     </LinearLayout>
+
     <View
-        android:layout_width="1dp"
+        android:layout_width="0.5dp"
         android:layout_height="match_parent"
-        android:layout_marginHorizontal="12dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:background="#33FFFFFF" />
+
 
     <HorizontalScrollView
         android:layout_width="0dp"
@@ -48,13 +51,13 @@
         android:overScrollMode="ifContentScrolls"
         android:scrollbars="none">
 
-            <com.google.android.material.chip.ChipGroup
-                android:id="@+id/routeLegsChipGroup"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:singleLine="true"
-                app:chipSpacing="2dp"
-                android:layout_gravity="center_vertical"/>
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/routeLegsChipGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            app:chipSpacing="1dp"
+            app:singleLine="true" />
     </HorizontalScrollView>
 
 
