--- a/android-kotlin/feature_chatbot/src/main/res/layout/item_chat_bot_directions.xml
+++ b/android-kotlin/feature_chatbot/src/main/res/layout/item_chat_bot_directions.xml
@@ -2,11 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginStart="16dp"
     android:layout_marginTop="4dp"
     android:layout_marginBottom="4dp"
     android:orientation="vertical"
     android:padding="10dp">
+
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/routeMapView"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        />
+
 
     <TextView
         android:id="@+id/startLocationTextView"
