--- a/android-kotlin/feature_login/src/main/res/values-night/themes.xml
+++ b/android-kotlin/feature_login/src/main/res/values-night/themes.xml
@@ -4,4 +4,12 @@
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
+
+    <style name="Theme.YourApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- 确保继承自 MaterialComponents -->
+        <item name="colorPrimary">#6200EE</item>
+        <item name="colorPrimaryVariant">#3700B3</item>
+        <item name="colorOnPrimary">@color/white</item>
+    </style>
+
 </resources>
