add Logout logic and change password

--- a/android-kotlin/feature_login/src/main/res/layout/activity_login.xml
+++ b/android-kotlin/feature_login/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- 背景图片 -->
+    <!-- background -->
     <ImageView
         android:id="@+id/bgImage"
         android:layout_width="0dp"
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- 半透明登录容器 -->
+    <!-- login box -->
     <LinearLayout
         android:id="@+id/loginBox"
         android:layout_width="0dp"
@@ -31,7 +31,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <!-- Login 标题 -->
+        <!-- Login title -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -41,7 +41,7 @@
             android:textColor="@android:color/white"
             android:layout_marginBottom="8dp" />
 
-        <!-- 描述 -->
+        <!-- description -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -50,7 +50,7 @@
             android:textColor="#DDDDDD"
             android:layout_marginBottom="24dp" />
 
-        <!-- 用户名输入框 -->
+        <!-- username input -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/usernameInputLayout"
             android:layout_width="match_parent"
@@ -77,7 +77,7 @@
                 android:inputType="text" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <!-- 密码输入框 -->
+        <!-- password input -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/passwordInputLayout"
             android:layout_width="match_parent"
@@ -103,7 +103,7 @@
                 android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <!-- 登录按钮 -->
+        <!-- login btn -->
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnLogin"
             android:layout_width="match_parent"
@@ -116,7 +116,7 @@
             android:elevation="0dp" />
 
 
-        <!-- 注册按钮 -->
+        <!-- sign up btn -->
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnRegister"
             android:layout_width="match_parent"
