--- a/infra/ansible/templates/docker-compose.yml.j2
+++ b/infra/ansible/templates/docker-compose.yml.j2
@@ -1,10 +1,32 @@
 services:
   frontend:
     image: {{ docker_username }}/frontend:{{ image_tag }}
-    ports:
-      - "3000:3000"
+    expose:
+      - "3000"  
 
   backend:
     image: {{ docker_username }}/backend:{{ image_tag }}
+    expose:
+      - "8080"
+    depends_on:
+      - mongodb
+    environment:
+      - MONGODB_URI=mongodb://mongodb:27017/simbus-mongo
+
+  mongodb:
+    image: mongo:6.0
+    restart: unless-stopped
+    expose:
+      - "27017"
+    volumes:
+      - mongo-data:/data/db
+
+  nginx:
+    image: nginx:latest
     ports:
-      - "8080:8080"
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - frontend
+      - backend
