--- a/android-kotlin/feature_navigateBar/src/main/res/layout/activity_change_password.xml
+++ b/android-kotlin/feature_navigateBar/src/main/res/layout/activity_change_password.xml
@@ -10,8 +10,8 @@
     <!-- back button -->
     <ImageView
         android:id="@+id/btnBack"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:src="@drawable/ic_arrow_back"
         android:contentDescription="Back"
         android:clickable="true"
@@ -21,20 +21,22 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <!-- title -->
+
+    <!-- current password -->
     <TextView
         android:id="@+id/titleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="52dp"
         android:text="Change Password"
+        android:textColor="#000000"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="#000000"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/btnBack"
         app:layout_constraintBottom_toBottomOf="@id/btnBack"
-        android:layout_marginStart="12dp" />
+        app:layout_constraintStart_toEndOf="@id/btnBack"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.619" />
 
-    <!-- current password -->
     <EditText
         android:id="@+id/currentPassword"
         style="@style/StyledInput"
