add user name change while user change

--- a/android-kotlin/feature_navigateBar/src/main/res/layout/activity_about_us.xml
+++ b/android-kotlin/feature_navigateBar/src/main/res/layout/activity_about_us.xml
@@ -15,7 +15,7 @@
         android:contentDescription="back"
         android:clickable="true"
         android:focusable="true"
-        app:tint="@color/black"
+        android:tint="@color/black"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
