--- a/android-kotlin/feature_navigateBar/src/main/res/layout/activity_change_password.xml
+++ b/android-kotlin/feature_navigateBar/src/main/res/layout/activity_change_password.xml
@@ -16,26 +16,27 @@
         android:contentDescription="Back"
         android:clickable="true"
         android:focusable="true"
-        app:tint="#000000"
+        android:tint="#000000"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <!-- title -->
 
     <!-- current password -->
+
     <TextView
         android:id="@+id/titleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
+        android:layout_marginStart="36dp"
         android:text="Change Password"
         android:textColor="#000000"
-        android:textSize="20sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/btnBack"
         app:layout_constraintStart_toEndOf="@id/btnBack"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.619" />
+        app:layout_constraintVertical_bias="0.437" />
 
     <EditText
         android:id="@+id/currentPassword"
