--- a/android-kotlin/feature_navigateBar/src/main/res/layout/fragment_menu_content.xml
+++ b/android-kotlin/feature_navigateBar/src/main/res/layout/fragment_menu_content.xml
@@ -15,6 +15,8 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@drawable/sample_profile"
+            android:clickable="true"
+            android:focusable="true"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
