--- a/android-kotlin/feature_chatbot/src/main/res/drawable/map_border.xml
+++ b/android-kotlin/feature_chatbot/src/main/res/drawable/map_border.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <!-- Rounded corners -->
+    <corners android:radius="25dp" />
+    <!-- Semi-transparent white border (50% opacity) -->
+    <stroke
+        android:width="4dp"
+        android:color="#80FFFFFF" /> <!-- 80 hex = 50% opacity white -->
+    <!-- Transparent center -->
+    <solid android:color="@android:color/transparent" />
+</shape>
