fix(nginx): grafana and prometheus nginx reverse proxy solving

--- a/infra/ansible/templates/docker-compose.yml.j2
+++ b/infra/ansible/templates/docker-compose.yml.j2
@@ -21,11 +21,12 @@ services:
     volumes:
       - mongo-data:/data/db
 
-  prometheus:
+prometheus:
     image: prom/prometheus:latest
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--web.external-url=/prometheus/'
+      - '--web.route-prefix=/'
+      - '--web.external-url=http://{{ aws_server_ip }}/prometheus/'
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
     expose:
