--- a/android-kotlin/feature_saveRoute/src/main/res/layout/addedit_route.xml
+++ b/android-kotlin/feature_saveRoute/src/main/res/layout/addedit_route.xml
@@ -189,6 +189,40 @@
         app:layout_constraintStart_toEndOf="@id/ArrivalTimeText"
         app:layout_constraintTop_toBottomOf="@id/StartTimeText"
         />
+
+    <TextView
+        android:id="@+id/NotifText"
+        android:layout_width="190dp"
+        android:layout_height="20dp"
+        android:text="Number of notifications sent:"
+        android:layout_marginTop="36dp"
+        android:layout_marginLeft="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ArrivalTimeText"/>
+
+    <EditText
+        android:id="@+id/NotfiEdit"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:focusable="false"
+        android:clickable="true"
+        android:inputType="none"
+        app:layout_constraintStart_toEndOf="@id/NotifText"
+        app:layout_constraintTop_toBottomOf="@+id/ArrivalTimeText"/>
+
+    <TextView
+        android:id="@+id/notifupdate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="test"
+        android:visibility="gone"
+        android:layout_marginLeft="15dp"
+        app:layout_constraintTop_toBottomOf="@id/NotifText"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+
+
     <TextView
         android:id="@+id/DaysFrequencyText"
         android:layout_width="wrap_content"
@@ -196,7 +230,7 @@
         android:text="Days:"
         android:layout_marginTop="36dp"
         android:layout_marginLeft="15dp"
-        app:layout_constraintTop_toBottomOf="@+id/ArrivalTimeText"
+        app:layout_constraintTop_toBottomOf="@+id/NotifText"
         app:layout_constraintStart_toStartOf="parent"
         >
     </TextView>
