--- a/android-kotlin/feature_chatbot/src/main/res/layout/item_chat_bot_directions.xml
+++ b/android-kotlin/feature_chatbot/src/main/res/layout/item_chat_bot_directions.xml
@@ -80,4 +80,15 @@
         android:divider="?android:attr/dividerHorizontal"
         android:showDividers="middle" />
 
+    <Button
+        android:id="@+id/startJourneyButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start Journey" />
+    <Button
+        android:id="@+id/saveJourneyButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save for Later" />
+
 </LinearLayout>
