--- a/android-kotlin/feature_chatbot/src/main/res/layout/activity_chatbot.xml
+++ b/android-kotlin/feature_chatbot/src/main/res/layout/activity_chatbot.xml
@@ -47,6 +47,7 @@
                 android:layout_height="50dp"
                 android:contentDescription="Back"
                 android:src="@drawable/arrow"
+                android:layout_marginLeft="30dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
