--- a/android-kotlin/feature_navigateBar/src/main/res/layout/fragment_bottom_nav.xml
+++ b/android-kotlin/feature_navigateBar/src/main/res/layout/fragment_bottom_nav.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        android:layout_margin="8dp"
+        android:layout_marginHorizontal="20dp"
         android:background="@drawable/rounded_nav_card"
         android:elevation="4dp"
         android:orientation="vertical">
